--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,23 +12,23 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Letsthink</title>
-    <script type="text/javascript">
+<!--     <script type="text/javascript">
       (function(c,l,a,r,i,t,y){
           c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
           t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
           y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
       })(window, document, "clarity", "script", "jxci35tdnd");
-    </script>
+    </script> -->
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8MPPVZSZTY"></script>
-    <script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-8MPPVZSZTY"></script> -->
+<!--     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-8MPPVZSZTY');
-    </script>
-    <script>
+    </script> -->
+<!--     <script>
       var _hmt = _hmt || [];
       (function() {
         var hm = document.createElement("script");
@@ -36,7 +36,7 @@
         var s = document.getElementsByTagName("script")[0]; 
         s.parentNode.insertBefore(hm, s);
       })();
-    </script>
+    </script> -->
     <script src="https://cdn.bootcdn.net/ajax/libs/3Dmol/2.0.1/3Dmol-min.min.js"></script>
   </head>
   <body>
